Add detailed README sections for GeneticConflictSeeker, including setup, running instructions, and configuration details